--- a/app/(client)/globals.css
+++ b/app/(client)/globals.css
@@ -2,4 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
- 
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-thumb {
+  background-color:#950CE8;
+}
